@@ -29,6 +29,7 @@ Changes for 3.0.4rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-10828] fixed server/proxy crashes when performing Simple checks with invalid key parameters hidden in user macro (viktors)
 ..F....... [ZBX-10789] fixed drawing graphs with items that have scheduling intervals (Cemeris)
 ...G...... [ZBX-10852] fixed agent compilation on AIX 5.2, AIX 5.3 (wiper)
 ..F....... [ZBX-10457] fixed copying triggers to groups with multiple hosts or templates (Ivo)
@@ -1428,6 +1429,7 @@ Changes for 2.2.14rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-10828] fixed server/proxy crashes when performing Simple checks with invalid key parameters hidden in user macro (viktors)
 .......PS. [ZBX-10819] fixed server/proxy compilation error on Solaris 10 (viktors)
 ........S. [ZBX-10723] forced quoting of item key parameter if macro resolution resulted in unquoted parameter with leading spaces (gleb)
 .......PS. [ZBX-8096] allowed "noSuchName" to be returned for SNMPv2 and SNMPv3 (asaveljevs)
